# interactive-immich-public-proxy

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md
migrations/: 0001_init.sql  0002_exif.sql  0003_password.sql  0004_listed.sql  0005_dead.sql
src/: config.rs  db.rs  error.rs  immich.rs  main.rs  ratelimit.rs  state.rs  tenant.rs  tests.rs  visitor.rs  web.rs
src/routes/: access.rs  admin.rs  albums.rs  assets.rs  download.rs  marks.rs  media.rs  mod.rs  notes.rs  visitor.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  App.test.ts  actions.ts  api.ts  app.css  layout.test.ts  layout.ts  test-setup.ts  types.ts
web/src/components/: AlbumIndex.svelte  AlbumIndex.test.ts  Gallery.svelte  Gallery.test.ts  Lightbox.svelte  Lightbox.test.ts  NameBanner.svelte  NotesPanel.svelte  PasswordGate.svelte  Slideshow.svelte  Slideshow.test.ts  Tile.svelte  Toolbar.svelte
